---
source: buildpacks/nodejs/src/yarn/errors.rs
---
- Debug Info:
  - Command failed `yarn install`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to install Node modules
!
! The Heroku Node.js buildpack uses the command `yarn install` to install your Node modules. This command failed and the buildpack cannot continue. This error can occur due to an unstable network connection. See the log output above for more information.
!
! Suggestions:
! - Ensure that this command runs locally without error (exit status = 0).
! - Check the status of the upstream Node module repository service at https://status.npmjs.org/
!
! Use the debug information above to troubleshoot and retry your build.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
